Z-index fix

--- a/public/css/components/_main.scss
+++ b/public/css/components/_main.scss
@@ -36,7 +36,7 @@ h2 {
 header {
     height: 48px;
     border-bottom: 1px solid #333;
-    z-index: 100;
+    z-index: 1000;
     background-color: #1e1e1e;
     // padding: 16px;
 
